# 2017_Myirc

./: CMakeLists.txt  Makefile  README.md
.circleci/: config.yml
cli/: Gui.pro  Makefile  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cli/Gui/: Makefile  mainwindow.h  socketmanager.cpp  socketmanager.h
client/: Makefile  client  client.c  main.c
client/Gui/Gui/: Gui  Gui.pro  Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  socketmanager.cpp  socketmanager.cpp.autosave  socketmanager.h  ui_mainwindow.h
client/Gui/build-Gui-Desktop-Debug/: Gui  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
include/: client.h  server.h  socket.h
server/: Makefile  client.c  cmd_handler.c  parser.c  poll_handler.c  server.c
server/commands/: cmd_join.c  cmd_list.c  cmd_msg_fsend.c  cmd_names.c  cmd_nick.c  cmd_part.c  cmd_ping.c  cmd_privmsg.c  cmd_quit.c  cmd_unknown.c  cmd_user.c
shared/: client_socket.c  server_socket.c  socket.c  tools.c
srv/: Makefile  client.c  cmd_handler.c  parser.c  poll_handler.c  server.c
srv/commands/: cmd_join.c  cmd_join_utils.c  cmd_list.c  cmd_msg_faccept.c  cmd_names.c  cmd_nick.c  cmd_part.c  cmd_pass.c  cmd_ping.c  cmd_privmsg.c  cmd_quit.c  cmd_server.c  cmd_unknown.c  cmd_user.c
